# HAVE_CoRL25

./: .gitignore  .gitmodules  README.md  demo.ipynb  index.html  pyproject.toml
assets/: bookmark1_template.urdf  bookmark2_template.urdf  cuboid.urdf  knife_template.urdf  panda_with_spatula.urdf  rod.urdf  template.urdf
assets/corn/: rod.urdf
assets/knife/: rod.urdf
assets/okra/: rod.urdf
assets/spoon/: rod.urdf
configs/: _logging.yaml  eval_sim.yaml  eval_sim_uneven_object.yaml  eval_sim_uneven_object_scoring.yaml  train.yaml  train_generator.yaml  train_uneven_object.yaml  train_verifier.yaml
configs/dataset/: articulated.yaml  articulated_heldout.yaml  articulated_tvu.json  articulated_tvu.yaml  multimodal_door.yaml  uneven_object.json  uneven_object.yaml  unevenobject.yaml  unevenobject_toy.yaml
configs/inference/: unevenobject_diffuser_hispndit.yaml  unevenobject_diffuser_pndit.yaml
configs/model/: haverifier.yaml
configs/training/: articulated_diffuser_pndit.yaml  articulated_haverifier.yaml  articulated_heldout_diffuser_pndit.yaml  articulated_heldout_haverifier.yaml  (+6 more)
metadata/: articulated_heldout.json  movable_links_fullset_000_full.json  multimodal_door.json  umpnet_data_split_new.json
notebooks/: demo.ipynb
scripts/: collect_dataset.py  eval.py  eval_sim_diffuser.py  eval_sim_diffuser_oracle.py  eval_sim_diffuser_scoring.py  preprocess_dataset.py  scoring_module_flash_qkv_accelerator_v2.py  simulation_eval.py  train.py  train_generator.py  train_verifier.py
utils/: generate_dataset.py  generate_urdf.py  indices.py  tracker.py
(+30 files in other folders)
